# VoiceTGBot

./: .gitignore  main.py  pyproject.toml  readme  voice_engines.py
bot_core/handlers/: audio.py  auth.py  common.py
bot_core/kbrds/: auth_kb.py
