[tool.poetry]
name = "odbclient"
version = "0.1.0"
description = ""
authors = ["QuestBuilder <bioarduino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
